# vrp

./: README.md  pyproject.toml  template_env
doc/: report.md
doc/results/: table.py
doc/results/i40/: bounds.txt
src/: main.py
src/bounds/: lower_bound.py  upper_bound.py
src/datastore/: edge_manager.py
src/eval/: route_eval.py
src/optimiser/initial/: greedy.py  naive.py
src/optimiser/iterative/: local_search.py
src/optimiser/iterative/operations/: operation.py  three_opt_swap.py  two_opt_swap.py
src/report/: plot_builder.py  route_export.py
src/schemas/: node.py  route.py
src/utils/: logger.py
